crates/keron-lang/tests/corpus/errors/parse/multiline_string_bad_indent.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: multiline string content must use the closing delimiter indentation
  --> 1:11
  |
1 | val bad = """
  |           ^
